@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: %Bundle-Name.0
 Bundle-SymbolicName: org.eclipse.linuxtools.valgrind.massif;singleton:=true
-Bundle-Version: 1.0.0.qualifier
+Bundle-Version: 1.1.0.qualifier
 Bundle-Activator: org.eclipse.linuxtools.internal.valgrind.massif.MassifPlugin
 Bundle-Vendor: %Bundle-Vendor.0
 Require-Bundle: org.eclipse.ui,
@@ -10,7 +10,8 @@ Require-Bundle: org.eclipse.ui,
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
 Bundle-ActivationPolicy: lazy
 Bundle-Localization: plugin
-Import-Package: org.eclipse.cdt.debug.core,
+Import-Package: org.eclipse.cdt.core.model,
+ org.eclipse.cdt.debug.core,
  org.eclipse.cdt.debug.ui,
  org.eclipse.cdt.launch,
  org.eclipse.core.resources,
@@ -19,6 +20,9 @@ Import-Package: org.eclipse.cdt.debug.core,
  org.eclipse.debug.core.sourcelookup,
  org.eclipse.debug.ui,
  org.eclipse.jface.text,
+ org.eclipse.linuxtools.internal.valgrind.core,
+ org.eclipse.linuxtools.internal.valgrind.launch,
+ org.eclipse.linuxtools.profiling.launch,
  org.eclipse.linuxtools.profiling.ui,
  org.eclipse.linuxtools.valgrind.core,
  org.eclipse.linuxtools.valgrind.launch,
