@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: %Bundle-Name.0
 Bundle-SymbolicName: org.eclipse.linuxtools.valgrind.memcheck;singleton:=true
-Bundle-Version: 1.0.0.qualifier
+Bundle-Version: 1.1.0.qualifier
 Bundle-Activator: org.eclipse.linuxtools.internal.valgrind.memcheck.MemcheckPlugin
 Bundle-Vendor: %Bundle-Vendor.0
 Require-Bundle: org.eclipse.ui,
@@ -18,6 +18,7 @@ Import-Package: org.eclipse.cdt.debug.core,
  org.eclipse.debug.ui,
  org.eclipse.debug.ui.sourcelookup,
  org.eclipse.jface.text,
+ org.eclipse.linuxtools.internal.valgrind.core,
  org.eclipse.linuxtools.internal.valgrind.launch,
  org.eclipse.linuxtools.profiling.launch,
  org.eclipse.linuxtools.profiling.ui,
