@@ -1,3 +1,9 @@
+2012-09-11  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* META-INF/MANIFEST.MF: Add import of o.e.l.internal.valgrind.core. 
+	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckToolPage.java (setDefaults): Set the
+	ATTR_TOOL attribute to be memcheck.
+	 
 2012-09-05  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* plugin.xml: Add memcheck as memory profiling provider.
